--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
     		<artifactId>spring-boot-devtools</artifactId>
 		    <version>3.4.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 
 	</dependencies>
 
